# AUV-Coop-Assembly

./: .gitignore  .travis.yml  Doxyfile  README.markdown  Readme.md  Readme_8md_source.html  Rpy2Rot_8m_source.html  S_8m_source.html  annotated.html  armNullVelTask_8cpp_source.html  armNullVelTask_8h_source.html  armShapeTask_8cpp_source.html  armShapeTask_8h_source.html  classArmNullVelTask-members.html  classArmNullVelTask.html  classArmShapeTask-members.html  classArmShapeTask.html  classCollisionPropagator-members.html  classCollisionPropagator.html  classController-members.html  classController.html  classCoopTask-members.html  classCoopTask.html  classCoordInterfaceCoord-members.html  classCoordInterfaceCoord.html  classCoordInterfaceMissMan-members.html  classCoordInterfaceMissMan.html  classDetector-members.html  classDetector.html  classEndEffectorReachTask-members.html  classEndEffectorReachTask.html  classForceInsertTask-members.html  classForceInsertTask.html  classFovEEToToolTask-members.html  classFovEEToToolTask.html  classGraspConstrainer-members.html  classGraspConstrainer.html  classHorizontalAttitudeTask-members.html  classHorizontalAttitudeTask.html  classJointLimitTask-members.html  (+221 more)
images/: CodeScheme.drawio  CodeScheme_single.drawio  asd.drawio
matlab/: bohhh.m  cilinder.m  main.m  main4thesis.m  multiplica.m  plot6DVectorDivided.m  plotCoopVel.m  plotDifferenceCoopVel.m  plotForcesTorquesWorld.m  plotForcesWorld.m  plotGenericError.m  plotGenericErrorDivided.m  plotGenericErrorDividedNorm.m  plotNonCoopVel.m  plotStressTool.m  plotTask.m  plotTorquesWorld.m  plotTransformMatrices.m  plotTransformMatricesRespectHole.m  plotTransformMatricesSlide.m  plotVector.m  plotYDot.m  plotYDotDivided.m  plotYDotDivided2.m  plotYDotDivided3.m  untitled.fig
model/: g500ARM5APeg.urdf  g500ARM5APeg.urdf.xacro  g500ARM5APeg2.urdf  g500ARM5APeg2.urdf.xacro  g500ARM5BPeg.urdf  g500ARM5BPeg.urdf.xacro  g500ARM5BPeg2.urdf  g500ARM5BPeg2.urdf.xacro
search/: all_0.js  all_1.js  all_10.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_9.js  all_a.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  (+36 more)
src/peg/: CMakeLists.txt  CMakeLists_old.txt.bak  package.xml
src/peg/matlab/: boh24.m  bohhh.m  coopCartVelDiff.m  importMatrices  importMatrices.m  importMatrices.m~  jacobSimurv.m  main.m  main.m~  multiplica  plotCoopGeneric.m  plotCoopVel.m  plotGenericErrorDivided.m~  plotNonCoopVel.m  plotStressTool.m  plotTask.m  plotYDot.m  untitled.m  untitled.m~
src/peg/msg/: toCoord_msg.msg
src/peg/script/: keyboardCommandOdom_A.py  keyboardCommandVeh_A.py  keyboardCommandVeh_B.py  keyboardCommandVeh_both.py  keyboardCommand_A.py  keyboardCommand_B.py  tfListenerPrecise.py
src/peg/src/: 3DPointSquareFace.0.pos  3DPointSquareFace4.0.pos  3DPointSquareFace4.init  3DPointSquareFace6.init  3Dpoint.0.pos  3Dpoint.init  blockHole.cao  cameraL.xml  coordinator.cpp  coordinator_old.cpp  lTr.txt  main.cpp  main_old.cpp  main_oldold.cpp  missionManager.cpp  missionManagerPeg.cpp  missionManagerVision.cpp  old_coordinator_with_tools.cpp  old_missionManager.cpp  vision.cpp  vision2.cpp  vision_old.cpp
src/peg/src/controller/: collisionPropagation.cpp  collisionPropagator.cpp  controller.cpp  controller2_old.cpp  graspConstrainer.cpp
src/peg/src/controller/header/: collisionPropagation.h  collisionPropagator.h  controller.h  graspConstrainer.h
src/peg/src/header/: coordinator.h  main.h  main_old.h  missionManager.h  missionManagerPeg.h  missionManagerVision.h  vision.h
src/peg/src/helper/: jacobianHelper.cpp  kdlHelper.cpp  logger.cpp  logger_old.cpp
src/peg/src/helper/header/: infos.h  infosVision.h  jacobianHelper.h  kdlHelper.h  logger.h
src/peg/src/old/: controller2_old.cpp  controller_old.cpp  missionManagerClass.cpp  missionManagerClass.h  old_missionManager_with_tools.cpp  rosInterface_old.cpp  rosInterface_old2.cpp
src/peg/src/rosInterface/: rosInterface.cpp
src/peg/src/rosInterface/header/: rosInterface.h
src/peg/src/rosInterfaces/: coordInterfaceCoord.cpp  coordInterfaceMissMan.cpp  robotInterface.cpp  robotVisionInterface.cpp  visionInterfaceCoord.cpp  visionInterfaceMissMan.cpp  visionInterfaceVision.cpp  worldInterface.cpp
src/peg/src/rosInterfaces/header/: coordInterfaceCoord.h  coordInterfaceMissMan.h  robotInterface.h  robotVisionInterface.h  visionInterfaceCoord.h  visionInterfaceMissMan.h  worldInterface.h
src/peg/src/support/: conversions.cpp  formulas.cpp  prints.cpp
src/peg/src/support/header/: conversions.h  defines.h  formulas.h  prints.h  transforms.h
src/peg/src/tasks/: armNullVelTask.cpp  armShapeTask.cpp  coopTask.cpp  endEffectorReachTask.cpp  forceInsertTask.cpp  fovEEToToolTask.cpp  horizontalAttitudeTask.cpp  jointLimitTask.cpp  lastTask.cpp  manipulabilityTask.cpp  obstacleAvoidEETask.cpp  obstacleAvoidVehicleTask.cpp  pipeReachTask.cpp  task.cpp  vehicleConstrainVelTask.cpp  vehicleNullVelTask.cpp  vehicleReachTask.cpp
src/peg/src/tasks/header/: armNullVelTask.h  armShapeTask.h  coopTask.h  endEffectorReachTask.h  forceInsertTask.h  fovEEToToolTask.h  horizontalAttitudeTask.h  jointLimitTask.h  lastTask.h  manipulabilityTask.h  obstacleAvoidEETask.h  obstacleAvoidVehicleTask.h  pipeReachTask.h  task.h  vehicleConstrainVelTask.h  vehicleNullVelTask.h  vehicleReachTask.h
src/peg/src/vision/: 3DPointSquareFace4.0.pos  3DPointSquareFace6.init  blockHole.cao  blockHoleFace.cao  cameraL.xml  depthCameraSupport.cpp  detection-config-SIFT.xml  detector.cpp  tracker.cpp
src/peg/src/vision/data/: 3DPointPeg_left.0.pos  3DPointPeg_left.init  3DPointPeg_right.0.pos  3DPointPeg_right.init  3DPointSquareFace4_left.0.pos  3DPointSquareFace4_right.0.pos  3DPointSquareFace4_w2d_left.init  3DPointSquareFace4_w2d_right.init  blockHole.cao  blockHoleCilinder.cao  camera_left.xml  camera_rangeRight.xml  camera_right.xml  detection-config-MONO.xml  lTr.txt  pegModel.cao  pegModelCircle.cao  pegModelMay.cao
src/peg/src/vision/header/: depthCameraSupport.h  detector.h  tracker.h
(+90 files in other folders)
